# scenery_builder

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  pyproject.toml  requirements.txt  scenery_builder.sh  tutorial.md
.github/workflows/: black.yaml  docker.yaml  pages.yaml
config/: config.toml  setup.cfg  setup.toml
docs/: README.md  _config.yaml  index.md  tutorial.md
docs/cli/: autocompletion.md  config.md  door-keyframes.md  floorplan.md  gazebo.md  generate.md  index.md  mesh.md  occ-grid.md  polyline.md  tasks.md  transform.md  variation.md
docs/tutorials/: dynamic-doors.md
docs/tutorials/composable-models/: door-model.md  door-placement.md  door-states.md  index.md
queries/object_placing/: all.rq  get-object-info.rq  search-object-instances.rq
queries/task_generator/: coord.rq  inset.rq  query.rq  test.rq
src/fpm/: __init__.py  cli.py  constants.py  graph.py  logging.py  traversal.py  utils.py
src/fpm/generators/: door_keyframes.py  dot.py  gazebo.py  mesh.py  occ_grid.py  polyline.py  prov.py  ros.py  scenery.py  soprano.py  tasks.py  tts.py
src/fpm/object_placing/: main.py
src/fpm/object_placing/helpers/: constants.py  helpers.py  sdf.py
src/fpm/task_generator/: main.py
src/fpm/task_generator/helpers/: compute.py  query.py  transformation.py
src/fpm/task_generator/traversal/: traversal_example.py
src/fpm/templates/: frame-tree.dot.jinja  polyline.poly.jinja
src/fpm/templates/cli/: command.md.jinja
src/fpm/templates/gazebo/: door.sdf.jinja  floorplan.sdf.jinja  model.config.jinja  world.sdf.jinja
src/fpm/templates/gazebo/plugins/: adversarial.sdf.jinja  dsc-plugin.sdf.jinja  keyframes.sdf.jinja  tsc-plugin.sdf.jinja
src/fpm/templates/ifc/: fpm-context.json.jinja
src/fpm/templates/ifc/base/: cartesian-transformation-operator.json.jinja  circle-profile.json.jinja  faceted-brep.json.jinja  polygonal-face-set.json.jinja  rectangle-profile.json.jinja  shape-aspect.json.jinja
src/fpm/templates/ifc/doors/: door-entity.json.jinja  door-handle.json.jinja  door-lining.json.jinja  door-panel.json.jinja  filling-rel.json.jinja
src/fpm/templates/ifc/openings/: entryway-entity.json.jinja  opening-entity.json.jinja  voiding-rel.json.jinja
src/fpm/templates/ifc/placement/: object-placement.json.jinja  placement-rel-to.json.jinja  rel-placement-axis.json.jinja  rel-placement-coords.json.jinja  rel-placement-refdirection.json.jinja
src/fpm/templates/ifc/spaces/: space-boundary.json.jinja  space-entity.json.jinja  space-placement-polygonal.json.jinja  space-polygon.json.jinja
src/fpm/templates/ifc/task-elements/: milling-task.json.jinja
src/fpm/templates/ifc/walls/: wall-entity.json.jinja  wall-polygon.json.jinja  (+2 more)
src/fpm/templates/prov/: artefact-file-generation.json.jinja  fpm-file-generation.json.jinja  var-file-generation.json.jinja
src/fpm/templates/ros/: frames-ros2.launch.jinja  world.launch.jinja  world.ros1.launch.jinja  world.ros2.launch.jinja
src/fpm/templates/soprano/: avt-tasks.json.jinja  hdt-tasks.json.jinja  nav-goals.yaml.jinja  nvl-representation.txt.jinja  rci-tasks.json.jinja
src/fpm/templates/tts/: nav-goals.yaml.jinja  tasks.json.jinja  walls.json.jinja
src/fpm/transformations/: blender.py  objects.py  sdf.py  tasks.py
src/fpm/visualization/: plot.py
templates/gazebo/: door.sdf.jinja  floorplan.sdf.jinja  world.sdf.jinja
templates/object_placing/: model.config.jinja  model.sdf.jinja  world.sdf.jinja
templates/task_generation/: coord_frame.json  frame.json  gazebo.launch.jinja  inset_frame.json  model.config.jinja  model.sdf.jinja  radiation-meter-launch.stg  shape_frame.json  world.sdf.jinja
