[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpm"
description = "FloorPlan Modelling libraries for model to model transformations"
dynamic = ["version"]
dependencies = [
    "Jinja2>=3.0.3",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4,<2.0.0",
    "PyLD==2.0.3",
    "rdflib==6.2.0",
]
requires-python = ">= 3.11"
readme = "README.md"
maintainers = [
  {name = "SECORO Group", email = "secoro@groups.uni-bremen.de"}
]

[project.optional-dependencies]
dev = ["black>=24.4.2"]

[tool.black]
required-version = "24.4.2"