[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpm"
description = "FloorPlan Modelling libraries for model to model transformations"
dynamic = ["version"]
dependencies = [
    "Jinja2>=3.0.3",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4,<2.0.0",
    "PyLD>=2.0.3",
    "rdflib@git+https://github.com/secorolab/rdflib@fix/multi-type-scoped-context",
    "click>=8.1.7",
    "pyyaml",
    "floorplan_dsl@git+https://github.com/secorolab/FloorPlan-DSL",
    "transforms3d",
    "ifcld@git+https://github.com/secorolab/ifcld"
]
requires-python = ">= 3.11"
readme = "README.md"
maintainers = [
  {name = "SECORO Group", email = "secoro@groups.uni-bremen.de"}
]

[project.optional-dependencies]
dev = ["black>=24.4.2"]
blender = ["bpy==4.4.0"]

[project.scripts]
floorplan = "fpm.cli:floorplan"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.package-data]
"*" = ["*.jinja"]
