[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "fpm"
description = "FloorPlan Modelling libraries for model to model transformations"
dynamic = ["version"]
dependencies = [
    "Jinja2>=3.0.3",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4,<2.0.0",
    "PyLD>=2.0.3",
    "rdflib@git+https://github.com/secorolab/rdflib@fix/multi-type-scoped-context",
    "click>=8.1.7",
    "pyyaml",
    "floorplan_dsl@git+https://github.com/secorolab/FloorPlan-DSL",
    "transforms3d",
    "ifcld@git+https://github.com/secorolab/ifcld",
    "robofair@git+https://github.com/secorolab/robofair"
]
requires-python = ">= 3.11"
readme = "docs/README.md"
maintainers = [
  {name = "SECORO Group", email = "secoro@groups.uni-bremen.de"}
]

[tool.poetry]
packages = [{include = "fpm", from = "src"}]
include = [{path="*.jinja"}]
version = "0.0.0"

[tool.poetry.group.test.dependencies]


[tool.poetry.group.lint.dependencies]
black = ">=24.4.2"

[tool.poetry.group.dev]
include-groups = [
    "test",
    "lint",
]

[tool.poetry.group.dev.dependencies]


[tool.poetry.group.blender.dependencies]
bpy= "==4.4.0"



[project.scripts]
floorplan = "fpm.cli:floorplan"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
folders = [
  { path = "src" }
]

[tool.poetry-dynamic-versioning.files."src/fpm/__init__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""